2007-03-02  David Schleef  <ds@schleef.org>

	* Makefile.am:
	* configure.ac:
	  Fix detection for linking against libdl.
	  Patch from Loïc Minier.  Fixes bug #409269.

2007-03-01  Kjartan Maraas  <kmaraas@gnome.org>

	* players.c: (read_player): Fix 100% CPU problem introduced
	in 0.2.37. Patch from Joe Marcus Clarke. Closes bug #412951.

2007-03-01  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/Makefile.am: Only install the esddsp man page if
	we build the binary. Closes bug #412918. Patch from
	Cygwin Ports Maintainer.

============================== 0.2.37 ===========================

2007-01-31  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Use pkg-config to check for audiofile.
	Patch from Frederic Peters. Closes bug #350808.

2007-01-07  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/esdsample.1.in: Updated man page from
	Christopher Hanna. Closes bug #329631.

2007-01-05  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/esdcat.1.in: Updated man page.
	* docs/esdrec.1.in: Updated man page.
	Patches from Christopher Hanna at sun com.
	Closes bug #329626 and bug #329628.

2006-08-08  David Schleef  <ds@schleef.org>

	* esddsp.c: intercept open64() and other 64-bit variants.
	  Patch from Peter Åstrand.  Fixes #312665.

2006-08-07  David Schleef  <ds@schleef.org>

	* configure.ac: Fix linker flags with CoreAudio.  Fixes #313433.

2006-08-07  David Schleef  <ds@schleef.org>

	* players.c: Add check for return value of read.  Patch from
	  Fernando Herrera.  Fixes #337415.

2006-08-07  David Schleef  <ds@schleef.org>

	* players.c: Add checks for client disconnecting.  Patch from
	  Peter Åstrand.  Fixes #322206.

2006-08-07  David Schleef  <ds@schleef.org>

	* configure.ac: Check for audiofile.h.  Fixes #319464.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Remove bogus call to hstrerror().  Fixes #319968.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Don't terminate until last sample is finished playing.
	  Fixes #342729.
